# aech-cli-translator

./: AGENTS.md  CLI_MANIFEST_SPEC_v4.md  README.md  main.py  manifest.json  pyproject.toml  requirements.txt
aech_cli_translator/: main.py
